JSC CLoop warning fix https://bugs.webkit.org/show_bug.cgi?id=133259

Patch by Eva Balazsfalvi <evab.u-szeged@partner.samsung.com> on 2014-05-26
Reviewed by Darin Adler.

* llint/LLIntSlowPaths.cpp:
(JSC::LLInt::LLINT_SLOW_PATH_DECL):

Canonical link: https://commits.webkit.org/151298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169341 268f45cc-cd09-0410-ab3c-d52691b4dbfc